--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <hr>
 
-        <a href="./public/movie-ranking.html"><h2>Movie Ranki*ng Project</h2></a>
+        <a href="./public/movie-ranking.html"><h2>Movie Ranking Project</h2></a>
         <img class="fit-picture" src="./assets/images/movie-ranking.png" alt="Screenshot of Movie Ranking Website">  
         
         <a href="./public/birthday-invite.html"><h2>Birthday Invite Project</h2></a>
